[gd_scene load_steps=9 format=3 uid="uid://dwjmmilatv1ro"]

[ext_resource type="Texture2D" uid="uid://duxvsq5q608qq" path="res://assets/img/avatar/xiaoai.jpg" id="1_aujpg"]
[ext_resource type="Script" path="res://scene/sys/select_player.gd" id="1_yu5t7"]
[ext_resource type="Texture2D" uid="uid://bs5xksppejde4" path="res://assets/img/avatar/yunfeng.jpg" id="2_ls3vb"]
[ext_resource type="FontFile" uid="uid://cxjka85katcg8" path="res://assets/font/NotoSerifSC-Light.ttf" id="4_ptc6p"]
[ext_resource type="AudioStream" uid="uid://bthoifijbx05s" path="res://assets/sound/select_char.mp3" id="5_v6stk"]

[sub_resource type="Animation" id="Animation_4wj84"]
resource_name = "change_char_to_yunfeng"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Xiaoai:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Yunfeng:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7if7x"]
_data = {
"change_char_to_yunfeng": SubResource("Animation_4wj84")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_prmcw"]
bg_color = Color(0, 0, 0, 0.576471)

[node name="select_player" type="Node2D"]
script = ExtResource("1_yu5t7")

[node name="Xiaoai" type="Sprite2D" parent="."]
position = Vector2(574, 347)
scale = Vector2(0.85, 0.85)
texture = ExtResource("1_aujpg")

[node name="Yunfeng" type="Sprite2D" parent="."]
position = Vector2(573, 347)
scale = Vector2(0.85, 0.85)
texture = ExtResource("2_ls3vb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7if7x")
}

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(400, 60)
layout_mode = 3
anchors_preset = 0
offset_left = 60.0
offset_top = 533.0
offset_right = 460.0
offset_bottom = 593.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="yunfeng" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_ptc6p")
theme_override_font_sizes/font_size = 22
text = "云峰"

[node name="xiaoai" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_ptc6p")
theme_override_font_sizes/font_size = 22
text = "小爱"

[node name="description" type="Control" parent="."]
custom_minimum_size = Vector2(450, 270)
layout_mode = 3
anchors_preset = 0
offset_left = 664.0
offset_top = 49.0
offset_right = 1114.0
offset_bottom = 319.0

[node name="Panel" type="Panel" parent="description"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_prmcw")

[node name="lbl_description" type="Label" parent="description/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ptc6p")
theme_override_font_sizes/font_size = 24
text = "云峰（Yunfeng）
空军中校，年龄30，作战经验丰富
多次执行高危任务，冷静果断
擅长指挥与战术规划，是团队核心
内心坚毅，沉稳可靠，战友信赖的领袖
誓为人类守护最后一道防线"
horizontal_alignment = 1
vertical_alignment = 1

[node name="select_char_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_v6stk")
volume_db = 10.0

[node name="player_voice" type="AudioStreamPlayer2D" parent="."]
volume_db = 5.0

[connection signal="focus_entered" from="Control/HBoxContainer/yunfeng" to="." method="_on_yunfeng_focus_entered"]
[connection signal="pressed" from="Control/HBoxContainer/yunfeng" to="." method="_on_yunfeng_pressed"]
[connection signal="focus_entered" from="Control/HBoxContainer/xiaoai" to="." method="_on_xiaoai_focus_entered"]
[connection signal="pressed" from="Control/HBoxContainer/xiaoai" to="." method="_on_xiaoai_pressed"]
